--- a/src/Main/SelectionCharacterPage/selectionCharacterPage.css
+++ b/src/Main/SelectionCharacterPage/selectionCharacterPage.css
@@ -2,7 +2,7 @@
 .selection-character-section{
     height: 100%;
     width: 99vw;
-    background-image: url('../images/commonImages/background.jpg');
+    background-image: url('../../images/commonImages/background.jpg');
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
