--- a/src/Main/ResumePage/resumePage.css
+++ b/src/Main/ResumePage/resumePage.css
@@ -10,3 +10,35 @@
     display: flex;
     flex-direction: column;
 }
+
+.menu-container{
+    border: 2px solid white;
+    margin: 2vh 2vw;
+    margin-left: 15vw;
+    width: 70%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.menu-title-case{
+    display: flex;
+    width: 100%;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.menu-arrow{
+    color: white;
+    font-family:  SuperMario, sans-serif;
+
+}
+
+.menu-title{
+    font-family:  SuperMario, sans-serif;
+    color: white;
+    border: 2px solid white;
+    width: 60%;
+    padding: 1vh;
+    border-radius: 5%;
+}
