resumePage: contact Component done

--- a/src/Main/commonComponent/MenuComponent/ContactComponent/contactComponent.css
+++ b/src/Main/commonComponent/MenuComponent/ContactComponent/contactComponent.css
@@ -1,22 +1,15 @@
-.skills-container{
+.contact-container{
+    display: grid;
     overflow: overlay;
     height: 60vh;
     width: 100%;
     display: flex;
     flex-direction: column;
+    justify-content: center;
 }
 
-.skills-case{
-    display: flex;
-    flex-direction: column;
-    color: white;
-}
-
-.skills-title{
+.contact-title{
     font-family: SuperMario, sans-serif;
     font-size: 3vh;
-}
-
-.skills-text{
-    margin: 0.5vh;
+    color: white;
 }
