resumePage: some bug fixed

--- a/src/Main/commonComponent/MenuComponent/MenuTitleComponent/menuTitleComponent.css
+++ b/src/Main/commonComponent/MenuComponent/MenuTitleComponent/menuTitleComponent.css
@@ -22,7 +22,7 @@
 }
 
 .menu-title-selected{
-    color: black;
+    color: skyblue;
     background-color: white;
     font-family:  SuperMario, sans-serif;
     border: 2px solid white;
